# ts-client/sigmoid.sigmoid/api.swagger.yml
@@ -72,6 +72,45 @@ paths:
                   additionalProperties: {}
       tags:
         - Query
+  /sigmoid/sigmoid/get_pending_bridge_request:
+    get:
+      operationId: Query_GetPendingBridgeRequest
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              request:
+                type: object
+                properties:
+                  creator:
+                    type: string
+                  erc20Address:
+                    type: string
+                  amount:
+                    type: string
+                    format: uint64
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      tags:
+        - Query
   /sigmoid/sigmoid/get_pending_unstake_request:
     get:
       operationId: Query_GetPendingUnstakeRequest
@@ -229,6 +268,16 @@ definitions:
             '@type':
               type: string
           additionalProperties: {}
+  MsgCreateBridgeRequest:
+    type: object
+    properties:
+      creator:
+        type: string
+      erc20Address:
+        type: string
+      amount:
+        type: string
+        format: uint64
   MsgCreateUnstakeRequest:
     type: object
     properties:
@@ -252,6 +301,19 @@ definitions:
     properties:
       transactionId:
         type: string
+  QueryGetPendingBridgeRequestResponse:
+    type: object
+    properties:
+      request:
+        type: object
+        properties:
+          creator:
+            type: string
+          erc20Address:
+            type: string
+          amount:
+            type: string
+            format: uint64
   QueryGetPendingUnstakeRequestResponse:
     type: object
     properties:
@@ -282,6 +344,8 @@ definitions:
     properties:
       params:
         type: object
+  MsgApproveBridgeRequestResponse:
+    type: object
   MsgApproveRequestResponse:
     type: object
   MsgApproveUnstakeRequestResponse:
